# keystroke-rs

./: Cargo.toml  README.md
examples/: keys.rs  mouse.rs
src/: lib.rs
src/keyboard/: mod.rs
src/keyboard/platform/: windows.rs
src/mouse/: mod.rs
src/mouse/platform/: windows.rs
src/platform/: linux.rs  windows.rs
