[package]

name = "keystroke"
version = "0.0.3"
authors = ["Bree 11599528+Brecert@users.noreply.github.com"]
description = "Send a string, character, or keystroke event to the system."
keywords = ["keyboard", "gui", "scripting"]
repository = "https://github.com/brecert/keystroke-rs"
readme = "README.md"
license = "Unlicense"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os="linux")'.dependencies]
libxdo = "0.4.1"
itertools = "0.5.6"
