[package]

name = "sysinputs"
version = "0.0.5"
authors = ["Bree 11599528+Brecert@users.noreply.github.com"]
description = "Generate native system input events."
keywords = ["keyboard", "gui", "scripting"]
repository = "https://github.com/brecert/native-system-input-events"
readme = "README.md"
license = "Unlicense"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }